# NGSTroubleFinder

./: Dockerfile  LICENSE  README.md  pyproject.toml  setup.py
src/NGSTroubleFinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/modelBuilding/: createDataset.py  createPileups.py  plot.py  trainModel.py
src/ngsTroubleFinder/: haplotypeDetector.py  ngsTroubleFinder.py  plotter.py  pyPaCBAM.c  pyPaCBAM.py  relatednessProcessor.py  sample.py  sampleProcessor.py
src/ngsTroubleFinder/tools/: DNA.onnx  RNA.onnx  exonic_consecutive_snps_no_HVR.hg38.tsv
test/: testHaplotypeDetector.py  testNgsTroubleFinder.py  testPlotter.py  testPyPaCBAM.py  testRelatednessProcessor.py  testSampleProcessor.py
