[project]
name = "NGSTroubleFinder"
version = "1.0.3"
authors = [
  { name="Samuel Valentini", email="samuel.valentini@stalicla.com" },
]
description = "Python project for NGS data quality control"
readme = "README.md"
requires-python = ">=3.10,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "matplotlib==3.8.2",
  "numpy>=1.26.0",
  "pandas==2.2.0",
  "onnxruntime==1.20.1",
  "scipy==1.12.0",
  "plotly==5.24.1",
  "seaborn==0.13.2",
]

[project.scripts]
ngsTroubleFinder = "ngsTroubleFinder.ngsTroubleFinder:main"

[project.urls]
"Homepage" = "https://github.com/STALICLA-RnD/NGSTroubleFinder"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"ngsTroubleFinder.tools" = ["*.onnx", "*.tsv", "*.vcf"]

